--- a/index.css
+++ b/index.css
@@ -30,7 +30,7 @@ body {
    }
   
    #title {
-     background-image: url("back.jpg");
+     background-image: url("dog.jpg");
      color: rgb(20, 14, 14);
      background-size: cover;
    }
